Fixed modal alignment isssues.

--- a/frontend/src/styles/LikeDislike.css
+++ b/frontend/src/styles/LikeDislike.css
@@ -4,7 +4,8 @@ img{
 }
 
 .like-box {
-    width: 140px;
+    display: flex;
+    width: 160px;
     height: 45px;
     border-radius: 30px;
     background-color: rgb(219, 246, 250);
