--- a/frontend/src/styles/Modal.css
+++ b/frontend/src/styles/Modal.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    
+    padding-top: 40px;
     background-color: rgb(14, 106, 120);
     height: 90%;
     width: 62.5%;
@@ -37,8 +37,7 @@
     margin-top: 10px;
     color: #000;
     resize: none;
-
-    /* position: relative; */
+    margin-top: 20px;
 }
 .modal-buttons {
     display: flex;
